img path correction

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="d-flex subworkflex">
                 <div class="subsec ">
                     <div>
-                    <img class="subworkimg" src="/assets/images/subwork1.png" alt="subimg">
+                    <img class="subworkimg" src="assets/images/subwork1.png" alt="subimg">
                     </div>
                     <div class="subtextsec">
                         <h3 class="subheadertext">SUBSCRIBE, STARTING
@@ -98,7 +98,7 @@
                 </div>
                 <div class="subsec ">
                    <div>
-                    <img class="subworkimg" src="/assets/images/subwork2.png" alt="subimg">
+                    <img class="subworkimg" src="assets/images/subwork2.png" alt="subimg">
                     </div>
                     <div class="subtextsec">
                         <h3 class="subheadertext">WE GATHER A PERFECT
@@ -108,7 +108,7 @@
                 </div>
                 <div class="subsec ">
                     <div>
-                    <img class="subworkimg" src="/assets/images/subwork3.png" alt="subimg"></div>
+                    <img class="subworkimg" src="assets/images/subwork3.png" alt="subimg"></div>
                     <div class="subtextsec">
                         <h3 class="subheadertext">ENJOY YOUR NEW
                             FAVORITE
